test/fail/super-no-override.grace
constructor new {}

object {
  inherits new

  method name {
    super.name
  }

  name
}
